@@ -405,7 +405,7 @@ module ActionView
       #  # Generates: <input name="create_btn" onclick="new Ajax.Request('/testing/create',
       #  #     {asynchronous:true, evalScripts:true, parameters:Form.serialize(this.form)});
       #  #     return false;" type="button" value="Create" />
-      #  <%= button_to_remote 'create_btn', 'Create', :url => { :action => 'create' } %>
+      #  <%= submit_to_remote 'create_btn', 'Create', :url => { :action => 'create' } %>
       #
       #  # Submit to the remote action update and update the DIV succeed or fail based
       #  # on the success or failure of the request
@@ -413,24 +413,18 @@ module ActionView
       #  # Generates: <input name="update_btn" onclick="new Ajax.Updater({success:'succeed',failure:'fail'},
       #  #      '/testing/update', {asynchronous:true, evalScripts:true, parameters:Form.serialize(this.form)});
       #  #      return false;" type="button" value="Update" />
-      #  <%= button_to_remote 'update_btn', 'Update', :url => { :action => 'update' },
+      #  <%= submit_to_remote 'update_btn', 'Update', :url => { :action => 'update' },
       #     :update => { :success => "succeed", :failure => "fail" }
       #
       # <tt>options</tt> argument is the same as in form_remote_tag.
-      #
-      # Note: This method used to be called submit_to_remote, but that's now just an alias for button_to_remote
-      def button_to_remote(name, value, options = {})
+      def submit_to_remote(name, value, options = {})
         options[:with] ||= 'Form.serialize(this.form)'
 
-        options[:html] ||= {}
-        options[:html][:type] = 'button'
-        options[:html][:onclick] = "#{remote_function(options)}; return false;"
-        options[:html][:name] = name
-        options[:html][:value] = value
+        html_options = options.delete(:html) || {}
+        html_options[:name] = name
 
-        tag("input", options[:html], false)
+        button_to_remote(value, options, html_options)
       end
-      alias_method :submit_to_remote, :button_to_remote
 
       # Returns '<tt>eval(request.responseText)</tt>' which is the JavaScript function
       # that +form_remote_tag+ can call in <tt>:complete</tt> to evaluate a multiple
